--- a/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
+++ b/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
@@ -1,5 +1,4 @@
-﻿@using EntityLayer.Concrete
-@model List<WriterMessage>
+﻿@model List<Core_Proje.Models.UserMessageViewModel>
 
 @{
     ViewData["Title"] = "SenderMessageList";
@@ -17,7 +16,7 @@
                 <table class="table">
                     <thead>
                         <tr>
-
+                            <th>Resim</th>
                             <th>Alıcı</th>
                             <th>Konu</th>
                             <th>Tarih</th>
@@ -28,15 +27,25 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
+                        <tr>
+                            <td>
+                                @if (item.ImageUrl == null)
+                                {
+                                    <img src="/userimage/default.png" alt="image" class="rounded-circle profile-pic">
+                                }
+                                else
+                                {
+                                    <img src="/userimage/@item.ImageUrl" alt="image" class="rounded-circle profile-pic">
+                                }
 
-                                <td>@item.ReceiverName</td>
-                                <td>@item.Subject</td>
-                                <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
+                            </td>
+                            <td>@item.ReceiverName</td>
+                            <td>@item.Subject</td>
+                            <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
 
-                                <td><a href="/AdminMessage/SenderMessageDetails/@item.WriterMessageId" class="btn btn-warning">Mesajı Gör</a></td>
-                                <td><a href="/AdminMessage/DeleteMessage/@item.WriterMessageId" class="btn btn-danger">Mesajı Sil</a></td>
-                            </tr>
+                            <td><a href="/AdminMessage/SenderMessageDetails/@item.WriterMessageId" class="btn btn-warning">Mesajı Gör</a></td>
+                            <td><a href="/AdminMessage/DeleteMessage/@item.WriterMessageId" class="btn btn-danger">Mesajı Sil</a></td>
+                        </tr>
                         }
                     </tbody>
                 </table>
