--- a/Core_Proje/Views/AdminMessage/SenderMessageDetails.cshtml
+++ b/Core_Proje/Views/AdminMessage/SenderMessageDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model EntityLayer.Concrete.WriterMessage
+﻿@model Core_Proje.Models.UserMessageViewModel
 
 @{
     ViewData["Title"] = "SenderMessageDetails";
@@ -23,6 +23,10 @@
         table, th, td {
             border: 2px solid antiquewhite;
         }
+        td{
+          width: 1405px;
+           height: 46px !important;
+        }
     </style>
 </head>
 
@@ -35,7 +39,22 @@
                     <table border="1" bordercolordark="blue" class="table">
                         <tr>
                             <td style="width:120px !important;"><strong>Alıcı :</strong></td>
-                            <td colspan="6"><strong>@Model.ReceiverName</strong> [ @Model.Receiver ]</td>
+                            <td colspan="6">
+                                <div style="display: flex; align-items: center;">                     
+                                @if (Model.ImageUrl == null)
+                                {
+                                    <img src="/userimage/default.png" alt="image" class="rounded-circle profile-pic">
+                                }
+                                else
+                                {
+                                    <img src="/userimage/@Model.ImageUrl" alt="image" class="rounded-circle profile-pic">
+                                }
+                         
+                            
+                            <span style="margin-left: 10px;"><strong>@Model.ReceiverName</strong></span>
+                            <span style="margin-left: 10px;">[@Model.Receiver]</span>
+                                </div>
+                            </td>
 
                         </tr>
                         <tr>
