admin dashboardda son 5 proje kaldırıldı. todolisticin ajax iceren kontroller yazildi ve viewcomponentten o kontrollera ekleme istegi atildi

--- a/Core_Proje/Views/Dashboard/Index.cshtml
+++ b/Core_Proje/Views/Dashboard/Index.cshtml
@@ -11,7 +11,7 @@
 
     @await Component.InvokeAsync("FeatureStatistics")
 
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-4 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
@@ -37,11 +37,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
-        @await Component.InvokeAsync("Last5Projects")
+        @*@await Component.InvokeAsync("Last5Projects")
 
-    </div>
+    </div>*@
 
     @await Component.InvokeAsync("StatisticsDashboard2")
 
