--- a/Core_Proje/Views/Shared/Components/SlideList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/SlideList/Default.cshtml
@@ -20,19 +20,19 @@
                 <div class="preview-list w-100">
                     <div class="preview-item p-0">
                         <div class="preview-thumbnail">
-                            <img src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face12.jpg" class="rounded-circle" alt="">
+                            <img src="/userimage/@ViewBag.v2" class="rounded-circle" alt="">
                         </div>
                         <div class="preview-item-content d-flex flex-grow">
                             <div class="flex-grow">
                                 <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">Mesut RÜZGAR</h6>
+                                    <h6 class="preview-subject">@ViewBag.v</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <p class="text-muted">Yazılım Geliştirici Adayı </p>
+            <p class="text-muted">@ViewBag.v3</p>
             <div class="progress progress-md portfolio-progress">
                 <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
