--- a/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
@@ -12,20 +12,21 @@
             @foreach (var item in Model)
             {
                 <div class="preview-list">
-                    <div class="preview-item border-bottom">
-                        <div class="preview-thumbnail">
-                            @*<img src="@item.User.ImageUrl" alt="image" class="rounded-circle" />*@
-                        </div>
-                        <div class="preview-item-content d-flex flex-grow">
-                            <div class="flex-grow">
-                                <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">@item.Name</h6>
-                                    <p class="text-muted text-small">@item.Date</p>
+                    <a  href="/Contact/ContactDetails/@item.MessageId">
+                        <div class="preview-item border-bottom">
+                            <div class="preview-thumbnail">
+                            </div>
+                            <div class="preview-item-content d-flex flex-grow">
+                                <div class="flex-grow">
+                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                        <h6 class="preview-subject">@item.Name</h6>
+                                        <p class="text-muted text-small">@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</p>
+                                    </div>
+                                    <p class="text-muted">@item.Content</p>
                                 </div>
-                                <p class="text-muted">@item.Content</p>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             }
 
