yazar sayfasi navbar ve sidebar revize edildi

--- a/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
@@ -60,12 +60,12 @@
         </li>
 
 
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link" href="/Writer/Profile/Index">
                 <i class="ti-settings menu-icon"></i>
                 <span class="menu-title">Ayarlar</span>
             </a>
-        </li>
+        </li>*@
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Login/LogOut">
                 <i class="icon-power menu-icon"></i>
