--- a/Core_Proje/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Shared/Components/Navbar/Default.cshtml
@@ -12,8 +12,8 @@
     </a>
     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
         <a class="dropdown-item" href="/Writer/Profile/Index">
-            <i class="ti-settings text-primary"></i>
-            Ayarlar
+            <i class="mdi mdi-account  text-primary"></i>
+            Profil
         </a>
         <a class="dropdown-item" href="/Writer/Login/LogOut">
             <i class="ti-power-off text-primary"></i>
