--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -9,6 +9,15 @@
     <li class="nav-item nav-category">
         <span class="nav-link">Hızlı Erişim</span>
     </li>
+
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="/Dashboard/Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-speedometer"></i>
+            </span>
+            <span class="menu-title"> Gösterge Paneli</span>
+        </a>
+    </li>
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Default/Index">
             <span class="menu-icon">
@@ -25,14 +34,7 @@
             <span class="menu-title"> Yazar Sayfasına Git</span>
         </a>
     </li>
-    <li class="nav-item menu-items">
-        <a class="nav-link" href="/Dashboard/Index">
-            <span class="menu-icon">
-                <i class="mdi mdi-speedometer"></i>
-            </span>
-            <span class="menu-title"> Gösterge Paneli</span>
-        </a>
-    </li>
+
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Skill/Index">
             <span class="menu-icon">
@@ -141,7 +143,7 @@
         </a>
         <div class="collapse" id="auth">
             <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="./Profile/Index"> Profil </a></li>
+                <li class="nav-item"> <a class="nav-link" href="/Profile/Index"> Profil </a></li>
                 <li class="nav-item"> <a class="nav-link" href="/Writer/Login/LogOut"> Çıkış yap </a></li>
             </ul>
         </div>
