writerMessage tablasuna statu eklendi. admin dashboard istatistikleri duzenlendi ve dashboard revize edildi

--- a/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/FeatureStatistics/Default.cshtml
@@ -1,81 +1,95 @@
-﻿<div class="row">
-    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-9">
-                        <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">@ViewBag.c1</h3>
-                            
+﻿
+<div class="container-fluid">
+    <div class="row">
+        <!-- İstatistik Kartları - 1. Satır -->
+        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+            <!-- Kart 2 -->
+            <div class="card">
+                <!-- Kart içeriği -->
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="d-flex align-items-center align-self-start">
+                                <h3 class="mb-0">@ViewBag.c2</h3>
+
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="icon icon-box-danger">
+                                <span class="mdi mdi-email"></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3">
-                        <div class="icon icon-box-success ">
-                            <span class="mdi mdi-laptop-chromebook"></span>
-                        </div>
-                    </div>
+                    <h6 class="text-muted font-weight-normal">Toplam Okunmamış Mesaj Sayısı</h6>
                 </div>
-                <h6 class="text-muted font-weight-normal">Yetenek Sayısı</h6>
             </div>
         </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-9">
-                        <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">@ViewBag.c2</h3>
-                            
+        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+            <!-- Kart 3 -->
+            <div class="card">
+                <!-- Kart içeriği -->
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="d-flex align-items-center align-self-start">
+                                <h3 class="mb-0">@ViewBag.c3</h3>
+
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="icon icon-box-success">
+                                <span class="mdi mdi-email-open"></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3">
-                        <div class="icon icon-box-danger">
-                            <span class="mdi mdi-email"></span>
-                        </div>
-                    </div>
+                    <h6 class="text-muted font-weight-normal">Toplam Okunmuş Mesaj Sayısı</h6>
                 </div>
-                <h6 class="text-muted font-weight-normal">Okunmamış Mesaj Sayısı</h6>
             </div>
         </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-9">
-                        <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">@ViewBag.c3</h3>
-                            
+
+        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+            <!-- Kart 1 -->
+            <div class="card">
+                <!-- Kart içeriği -->
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="d-flex align-items-center align-self-start">
+                                <h3 class="mb-0">@ViewBag.c1</h3>
+
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="icon icon-box-success ">
+                                <span class="mdi mdi-laptop-chromebook"></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3">
-                        <div class="icon icon-box-success">
-                            <span class="mdi mdi-email-open"></span>
-                        </div>
-                    </div>
+                    <h6 class="text-muted font-weight-normal">Yetenek Sayısı</h6>
                 </div>
-                <h6 class="text-muted font-weight-normal">Okunmuş Mesaj Sayısı</h6>
             </div>
         </div>
-    </div>
-    <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-9">
-                        <div class="d-flex align-items-center align-self-start">
-                            <h3 class="mb-0">@ViewBag.c4</h3>
-                            
+
+        <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+            <!-- Kart 4 -->
+            <div class="card">
+                <!-- Kart içeriği -->
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-9">
+                            <div class="d-flex align-items-center align-self-start">
+                                <h3 class="mb-0">@ViewBag.c4</h3>
+
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="icon icon-box-success ">
+                                <span class="mdi mdi-sort-ascending"></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3">
-                        <div class="icon icon-box-success ">
-                            <span class="mdi mdi-sort-ascending"></span>
-                        </div>
-                    </div>
+                    <h6 class="text-muted font-weight-normal">Deneyim Sayısı</h6>
                 </div>
-                <h6 class="text-muted font-weight-normal">Deneyim Sayısı</h6>
             </div>
         </div>
     </div>
