--- a/Core_Proje/Views/Shared/Components/ProjectList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/ProjectList/Default.cshtml
@@ -2,7 +2,7 @@
 @model List<Portfolio>
 
 <div class="row ">
-    <div class="col-12 grid-margin">
+    <div class="col-md-12">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Projelerim</h4>
