--- a/Core_Proje/Views/Dashboard/Index.cshtml
+++ b/Core_Proje/Views/Dashboard/Index.cshtml
@@ -8,44 +8,33 @@
 <html lang="en">
 
 <body>
-
-    @await Component.InvokeAsync("FeatureStatistics")
-
-    @*<div class="row">
-        <div class="col-md-4 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Bütçe Geçmişi</h4>
-                    <canvas id="transaction-history" class="transaction-chart"></canvas>
-                    <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
-                        <div class="text-md-center text-xl-left">
-                            <h6 class="mb-1">Proje Ödemeleri</h6>
-                            <p class="text-muted mb-0">07 Jan 2019, 09:12AM</p>
-                        </div>
-                        <div class="align-self-center flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
-                            <h6 class="font-weight-bold mb-0">$236</h6>
-                        </div>
-                    </div>
-                    <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
-                        <div class="text-md-center text-xl-left">
-                            <h6 class="mb-1">Reklam Gelirleri</h6>
-                            <p class="text-muted mb-0">07 Jan 2019, 09:12AM</p>
-                        </div>
-                        <div class="align-self-center flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
-                            <h6 class="font-weight-bold mb-0">$593</h6>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- 1. Satır -->
+            <div class="col-xl-12">
+                @await Component.InvokeAsync("FeatureStatistics")
             </div>
-        </div>*@
+          
+        </div>
 
-        @*@await Component.InvokeAsync("Last5Projects")
+        <!-- 2. Satır -->
+        <div class="row">
+            <!-- 4. Sütun - L Harfi Düzeni -->
+            <div class="col-md-9">
+                @await Component.InvokeAsync("ProjectList")
+            </div>
+            <div class="col-xl-3">
+                @await Component.InvokeAsync("StatisticsDashboard2")
+            </div>
+        </div>
+    </div>
 
-    </div>*@
+
+    @*@await Component.InvokeAsync("FeatureStatistics")
 
     @await Component.InvokeAsync("StatisticsDashboard2")
 
-    @await Component.InvokeAsync("ProjectList")
+    @await Component.InvokeAsync("ProjectList")*@
 
     <div class="row">
 
