--- a/Core_Proje/Views/Shared/Components/StatisticsDashboard2/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/StatisticsDashboard2/Default.cshtml
@@ -1,57 +1,115 @@
-﻿<div class="row">
-    <div class="col-sm-4 grid-margin">
-        <div class="card">
-            <div class="card-body">
-                <h5>Projeler</h5>
-                <div class="row">
-                    <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                        <div class="d-flex d-sm-block d-md-flex align-items-center">
-                            <h2 class="mb-0">@ViewBag.v1</h2>
-                        </div>
-                        <h6 class="text-muted font-weight-normal">Aktif ve tamamlanan proje sayısı</h6>
-                    </div>
-                    <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                        <i class="icon-lg mdi mdi-codepen text-primary ml-auto"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-4 grid-margin">
-        <div class="card">
-            <div class="card-body">
-                <h5>Mesajlar</h5>
-                <div class="row">
-                    <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                        <div class="d-flex d-sm-block d-md-flex align-items-center">
-                            <h2 class="mb-0">@ViewBag.v2</h2>
-                        </div>
-                        <h6 class="text-muted font-weight-normal">Toplam Mesaj Sayısı</h6>
-                    </div>
-                    <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                        <i class="icon-lg mdi mdi-email text-danger ml-auto"></i>
-                    </div>
-                </div>
-               
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-4 grid-margin">
-        <div class="card">
-            <div class="card-body">
-                <h5>Hizmetler</h5>
-                <div class="row">
-                    <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                        <div class="d-flex d-sm-block d-md-flex align-items-center">
-                            <h2 class="mb-0">@ViewBag.v3</h2>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        /* Kartlar arasına boşluk eklemek için CSS */
+        .card {
+            margin-bottom: 30px; /* Kartlar arasında boşluk ekler */
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Kart 5 -->
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-9">
+                                <div class="d-flex align-items-center align-self-start">
+                                    <h3 class="mb-0">@ViewBag.v3</h3>
+
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="icon icon-box-success">
+                                    <span class="mdi mdi-monitor"></span>
+                                </div>
+                            </div>
                         </div>
                         <h6 class="text-muted font-weight-normal">Verilen hizmetlerin sayısı</h6>
                     </div>
-                    <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                        <i class="icon-lg mdi mdi-monitor text-success ml-auto"></i>
+                </div>
+            </div>
+
+
+            <!-- Kart 6 -->
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-9">
+                                <div class="d-flex align-items-center align-self-start">
+                                    <h3 class="mb-0">@ViewBag.v2</h3>
+
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="icon icon-box-success">
+                                    <span class="mdi mdi-email "></span>
+                                </div>
+                            </div>
+                        </div>
+                        <h6 class="text-muted font-weight-normal">Sayfadan Gelen Toplam Mesaj Sayısı</h6>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Kart 7 -->
+
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-9">
+                                <div class="d-flex align-items-center align-self-start">
+                                    <h3 class="mb-0">@ViewBag.v1</h3>
+
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="icon icon-box-success ">
+                                    <span class="mdi mdi-codepen "></span>
+                                </div>
+                            </div>
+                        </div>
+                        <h6 class="text-muted font-weight-normal">Aktif ve tamamlanan proje sayısı</h6>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Kart 8 -->
+
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-9">
+                                <div class="d-flex align-items-center align-self-start">
+                                    <h3 class="mb-0">@ViewBag.v4</h3>
+
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="icon icon-box-danger ">
+                                    <span class="mdi mdi-codepen "></span>
+                                </div>
+                            </div>
+                        </div>
+                        <h6 class="text-muted font-weight-normal">Aktif ve tamamlanmayan proje sayısı</h6>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+</body>
+</html>
+
+
+
