--- a/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
@@ -6,31 +6,45 @@
         <span class="count bg-success"></span>
     </a>
     <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-        <h6 class="p-3 mb-0">Son Mesajlar</h6>
+        <h6 class="p-3 mb-0">Okunmamış Mesajlar</h6>
         <div class="dropdown-divider"></div>
-        @foreach (var item in Model)
-        {
-            <a class="dropdown-item preview-item" href="/AdminMessage/ReceiverMessageDetails/@item.WriterMessageId">
-                <div class="preview-thumbnail">
-                    @if (item.ImageUrl == null)
+       
+                @if (Model.Count > 0)
+                {
+                    @foreach (var item in Model)
                     {
-                         <img src="/userimage/default.png" alt="image" class="rounded-circle profile-pic"> 
+                        <a class="dropdown-item preview-item" href="/AdminMessage/ReceiverMessageDetails/@item.WriterMessageId">
+                            <div class="preview-thumbnail">
+                                @if (item.ImageUrl == null)
+                                {
+                                    <img src="/userimage/default.png" alt="image" class="rounded-circle profile-pic">
+                                }
+                                else
+                                {
+                                    <img src="/userimage/@item.ImageUrl" alt="image" class="rounded-circle profile-pic">
+                                }
+                            </div>
+                            <div class="preview-item-content">
+                                <p class="preview-subject ellipsis mb-1">"@item.SenderName" bir mesaj gönderdi</p>
+                                <br />
+                                <p class="text-muted ellipsis mb-0"> @item.MessageContent </p>
+                                <br />
+                                <p class="text-muted mb-0"> @(((DateTime)item.Date).ToString("dd-MMM-yyyy")) </p>
+                            </div>
+                        </a>
                     }
-                     else
-                    {
-                          <img src="/userimage/@item.ImageUrl" alt="image" class="rounded-circle profile-pic">
-                    }
+                }
+                else
+                {
+                        <div class="preview-item-content">
+                            <br />
+                            <p class="text-muted mb-0"> Okunmamış mesajınız bulunmamaktadır. </p>
+                            <br />
 
-                </div>
-                <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1">"@item.SenderName" bir mesaj gönderdi </p>
-                    <br />
-                    <p class="text-muted ellipsis mb-0"> @item.MessageContent </p> 
-                    <br />
-                    <p class="text-muted mb-0"> @(((DateTime)item.Date).ToString("dd-MMM-yyyy")) </p>
-                </div>
-            </a>
-        }
+                        </div>
+                }
+
+         
 
 
         <div class="dropdown-divider"></div>
