--- a/Core_Proje/Areas/Writer/Views/Login/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Login/Index.cshtml
@@ -4,84 +4,54 @@
     Layout = null;
 }
 
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Skydash Admin</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="~/skydash/vendors/feather/feather.css">
-    <link rel="stylesheet" href="~/skydash/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="~/skydash/vendors/css/vendor.bundle.base.css">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="~/skydash/css/vertical-layout-light/style.css">
-    <!-- endinject -->
-    <link rel="shortcut icon" href="~/skydash/images/favicon.png" />
+    <title>Core 5.0 Giriş</title>
+    <link rel="stylesheet" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/mdi/css/materialdesignicons.min.css/">
+    <link rel="stylesheet" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/css/style.css">
+    <link rel="shortcut icon" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/favicon.png" />
 </head>
-
 <body>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-            <div class="content-wrapper d-flex align-items-center auth px-0">
-                <div class="row w-100 mx-0">
-                    <div class="col-lg-4 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <div class="brand-logo">
-                                <img src="~/skydash/images/logo.svg" alt="logo">
-                            </div>
-                            <h4>Merhaba! Hoşgeldiniz</h4>
-                            <h6 class="font-weight-light">Devam etmek için giriş yapın.</h6>
-                            <form class="pt-3" method="post" >
+            <div class="row w-100 m-0">
+                <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+                    <div class="card col-lg-4 mx-auto">
+                        <div class="card-body px-5 py-5">
+                            <h3 class="card-title text-left mb-3">Merhaba! Hoşgeldiniz</h3>
+                            <form method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" name="Username" placeholder="Kullanıcı Adınız">
+                                    <label>Kullanıcı Adı</label>
+                                    <input type="text" class="form-control form-control-lg" name="Username" >
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-lg" name="Password" placeholder="Şifreniz">
+                                    <label>Şifre</label>
+                                    <input type="password" class="form-control form-control-lg" name="Password" >
                                 </div>
-                                <div class="mt-3">
-                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Giriş Yap</button>
+                                
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-primary btn-block enter-btn">Giriş Yap</button>
                                 </div>
-                                <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <div class="form-check">
-                                        <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input">
-                                            Beni Hatırla
-                                        </label>
-                                    </div>
 
-                                </div>
-                                <div class="text-center mt-4 font-weight-light">
-                                    Bir hesabın yok mu? <a href="/Writer/Register/Index/" class="text-primary">Kayıt Ol</a>
-                                </div>
+                                Bir hesabın yok mu? <a href="/Writer/Register/Index/" class="text-primary">Kayıt Ol</a>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- content-wrapper ends -->
         </div>
-        <!-- page-body-wrapper ends -->
     </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="~/skydash/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="~/skydash/js/off-canvas.js"></script>
-    <script src="~/skydash/js/hoverable-collapse.js"></script>
-    <script src="~/skydash/js/template.js"></script>
-    <script src="~/skydash/js/settings.js"></script>
-    <script src="~/skydash/js/todolist.js"></script>
-    <!-- endinject -->
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/off-canvas.js"></script>
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/hoverable-collapse.js"></script>
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/misc.js"></script>
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/settings.js"></script>
+    <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/todolist.js"></script>
 </body>
-
 </html>
 
